--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #EE82EE;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --card-front-color: #836FFF;
+    --card-back-color: #BA55D3;
 }
 
 body {
