--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --text-color: #EE82EE;
+    --text-color: #9932CC;
     --card-front-color: #836FFF;
     --card-back-color: #BA55D3;
 }
